<resources>
    <string name="app_name">Simple Games</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="choose_game">What would you like to play?</string>
    <string name="game_name">Game Name</string>
    <string name="play_again">Play Again</string>
    <string name="congrats">Congratulations!</string>
    <string name="draw">It\'s a draw!</string>
    <string name="lost">You Lost!</string>
    <string name="empty">Empty</string>
    <string name="start_game">Start Game</string>
    <string name="hundred">100</string>
    <string name="high_score">High Score</string>
    <string name="score">Score: </string>
    <string name="error">Error</string>
    //Guess The Number
    <string name="guess_the_number">Guess the number</string>
    <string name="guess">Guess It</string>
    <string name="question_mark">\??</string>
    <string name="too_low">Too Low</string>
    <string name="too_high">Too High</string>
    <string name="guess_left">Number of guesses left: </string>
    //Settings
    <string name="reset">Reset Scores</string>
    <string name="settings">Settings</string>
    //TicTacToe
    <string name="your_turn">Your turn</string>
    <string name="pc_turn">Computer\'s turn</string>
    <string name="you_are">You are:</string>
    <string name="letter_x">X</string>
    <string name="letter_o">O</string>
    //TicTacToe Grids
    <string name="row_1_column_1">row 1 column 1</string>
    <string name="row_1_column_2">row 1 column 2</string>
    <string name="row_1_column_3">row 1 column 3</string>
    <string name="row_2_column_1">row 2 column 1</string>
    <string name="row_2_column_2">row 2 column 2</string>
    <string name="row_2_column_3">row 2 column 3</string>
    <string name="row_3_column_1">row 3 column 1</string>
    <string name="row_3_column_2">row 3 column 2</string>
    <string name="row_3_column_3">row 3 column 3</string>
    //Rock Paper Scissors
    <string name="rock_paper">Rock Paper Scissors</string>
    <string name="you">You</string>
    <string name="pc">PC</string>
    <string name="pick_one">Pick One</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="lizard">Lizard</string>
    <string name="spock">Spock</string>
    <string name="pc_win">Computer wins!</string>
    <string name="player_win">You win!</string>
</resources>