<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tictactoeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tictactoe.TicTacToeFragment">

    <GridLayout
        android:id="@+id/layoutGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".GridXMLActivity">

        <ImageButton
            android:id="@+id/imgBtn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:adjustViewBounds="true"
            android:background="@color/blue"
            android:contentDescription="@string/row_1_column_1"
            android:scaleType="fitCenter"
            android:src="@drawable/icons8_octahedron_64"
            android:tag="placeholder" />

        <ImageButton
            android:id="@+id/imgBtn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/blue"
            android:contentDescription="@string/row_1_column_2"
            android:scaleType="fitXY"
            android:src="@drawable/icons8_octahedron_64"
            android:tag="placeholder" />

        <ImageButton
            android:id="@+id/imgBtn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/blue"
            android:contentDescription="@string/row_1_column_3"
            android:scaleType="fitXY"
            android:src="@drawable/icons8_octahedron_64"
            android:tag="placeholder" />

        <ImageButton
            android:id="@+id/imgBtn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:adjustViewBounds="true"
            android:background="@color/blue"
            android:contentDescription="@string/row_2_column_1"
            android:scaleType="fitXY"
            android:src="@drawable/icons8_octahedron_64"
            android:tag="placeholder" />

        <ImageButton
            android:id="@+id/imgBtn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="true"
            android:background="@color/blue"
            android:contentDescription="@string/row_2_column_2"
            android:scaleType="fitXY"
            android:src="@drawable/icons8_octahedron_64"
            android:tag="placeholder" />

        <ImageButton
            android:id="@+id/imgBtn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:adjustViewBounds="true"
            android:background="@color/blue"
            android:contentDescription="@string/row_2_column_3"
            android:scaleType="fitXY"
            android:src="@drawable/icons8_octahedron_64"
            android:tag="placeholder" />

        <ImageButton
            android:id="@+id/imgBtn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:adjustViewBounds="true"
            android:background="@color/blue"
            android:contentDescription="@string/row_3_column_1"
            android:scaleType="fitXY"
            android:src="@drawable/icons8_octahedron_64"
            android:tag="placeholder" />

        <ImageButton
            android:id="@+id/imgBtn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="true"
            android:background="@color/blue"
            android:contentDescription="@string/row_3_column_2"
            android:scaleType="fitXY"
            android:src="@drawable/icons8_octahedron_64"
            android:tag="placeholder" />

        <ImageButton
            android:id="@+id/imgBtn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:adjustViewBounds="true"
            android:background="@color/blue"
            android:contentDescription="@string/row_3_column_3"
            android:scaleType="fitXY"
            android:src="@drawable/icons8_octahedron_64"
            android:tag="placeholder" />
    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutGrid">

        <TextView
            android:id="@+id/tvXO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are"
            android:textSize="56sp"
            app:layout_constraintEnd_toStartOf="@id/ivO"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/letter_o"
            android:src="@drawable/letter_o_64px"
            app:layout_constraintBottom_toBottomOf="@id/tvXO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tvXO"
            app:layout_constraintTop_toTopOf="@id/tvXO" />

        <ImageView
            android:id="@+id/ivX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/letter_x"
            android:src="@drawable/letter_x_64px"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/tvXO"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tvXO"
            app:layout_constraintTop_toTopOf="@id/tvXO" />

        <TextView
            android:id="@+id/tvTurn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/your_turn"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvXO" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutGrid"
        app:layout_goneMarginTop="10sp">

        <TextView
            android:id="@+id/tvGameEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrats"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnPlayAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGameEnd" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivEmpty"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/error"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvEmpty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/icon_nodata" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reset"
        android:textSize="32sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEmpty" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="180dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>