<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/iv_hud_2_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/hud2_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_choose_game"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/choose_game"
        app:layout_constraintStart_toStartOf="@id/iv_hud_2_3"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageView
        android:id="@+id/iv_hud_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/hud5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_hud_2_3" />


    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30sp"
        android:paddingEnd="50sp"
        app:layout_constraintEnd_toEndOf="@id/iv_hud_5"
        app:layout_constraintStart_toStartOf="@id/iv_hud_5"
        app:layout_constraintTop_toTopOf="@id/iv_hud_5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_tic_tac_toe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tic_tac_toe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_game"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guess_the_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_tic_tac_toe"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>